# Exzoo

exzoo_backend/: .flake8  .gitignore  Makefile  manage.py  mypy.ini  pyproject.toml
exzoo_backend/carts/: admin.py  apps.py  dataclasses.py  models.py  serializers.py  services.py  views.py
exzoo_backend/carts/migrations/: 0001_initial.py
exzoo_backend/exzoo_backend/: settings.py  urls.py  wsgi.py  yasg.py
exzoo_backend/fixtures/: category.json  db.json  product.json
exzoo_backend/orders/: admin.py  apps.py  choices.py  models.py  serializers.py  services.py  views.py
exzoo_backend/orders/migrations/: 0001_initial.py
exzoo_backend/products/: admin.py  apps.py  enums.py  filters.py  models.py  paginations.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
exzoo_backend/products/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py
exzoo_backend/users/: apps.py  models.py  serializers.py  tests.py
exzoo_backend/users/migrations/: 0001_initial.py
